fix(dotnet): handle nested braces in interpolated strings; tolerate null positional args
Grammar: INTERP_CHAR used '{' ~[}]* '}' which failed when an interpolation
hole contained nested braces (e.g. new[] { … } or object initializers).
Replace with a recursive INTERP_HOLE fragment that handles arbitrary
brace depth and allows newlines inside holes (C# 11+).

Visitor: List.copyOf() throws NullPointerException when any positional
attribute argument is not a string literal (null, enum values, integers
all produce null from extractString). Switch to
Collections.unmodifiableList(new ArrayList<>(...)) which preserves null
entries; downstream tag/display-name extraction already handles nulls.